--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Cat Clicker</title>
-	<link rel="stylesheet" href="css/main.css">
+    <meta charset="UTF-8">
+    <title>Cat Clicker</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<main>
-		
-		<section id="cat-list" class="list"></section>
+    <main>
+        
+        <section id="cat-list" class="list"></section>
 
-		<section class="selected">
-			<img id="selected-cat" alt="selected cat">
-			<p><span class="count"></span> clicks</p>
-		</section>
+        <section class="selected">
+            <img id="selected-cat" alt="selected cat">
+            <p><span class="count"></span> clicks</p>
+        </section>
 
-	</main>
+    </main>
 
-	<script src="js/app.js"></script>
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
